fixed wierd bug on my_works.html on mobile screen

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -604,7 +604,9 @@ label {
 			padding-top: 10px;
 		}
 	}
-
+	.container {
+		width: 100%;
+	}
 }
 
 @media screen and (max-width: 576px) {
